04-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: lab-3tier
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ealen/echo-server:latest
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: lab-3tier
spec:
  selector:
    app: backend
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
